kubernetes/deployment_01.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sugarcrm
  labels:
    app: sugarcrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sugarcrm
  template:
    metadata:
      labels:
        app: sugarcrm
    spec:
      containers:
      - name: sugarcrm
        image: your-registry/sugarcrm
        ports:
        - containerPort: 80
