kubernetes/deployment_02.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sugarcrm-apache
  labels:
    app: sugarcrm-apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sugarcrm-apache
  template:
    metadata:
      labels:
        app: sugarcrm-apache
    spec:
      containers:
      - name: sugarcrm-apache
        image: your-registry/sugarcrm
        ports:
        - containerPort: 80
        - containerPort: 443
