kubernetes/deployment_03.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sugarcrm-deployment
spec:
  selector:
    matchLabels:
      app: sugarcrm
  replicas: 1
  template:
    metadata:
      labels:
        app: sugarcrm
    spec:
      containers:
      - name: sugarcrm
        image: sugarcrm/sugarcrm:12.0.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: sugarcrm-data
          mountPath: /var/www/html/data/app/sugar
      volumes:
      - name: sugarcrm-data
        persistentVolumeClaim:
          claimName: sugarcrm-pvc
