kubernetes/service_01.yml
apiVersion: v1
kind: Service
metadata:
  name: sugarcrm-service
spec:
  selector:
    app: sugarcrm-apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
