kubernetes/service_02.yml
apiVersion: v1
kind: Service
metadata:
  name: sugarcrm-service
spec:
  selector:
    app: sugarcrm-apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
    - protocol: TCP
      port: 443
      targetPort: 443
