kubernetes/ingress_01.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sugarcrm-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: sugarcrm.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sugarcrm-service
          servicePort: 80
