kubernetes/ingress_02.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sugarcrm-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - sugarcrm.example.com
    secretName: tls-secret
  rules:
  - host: another.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: service
          servicePort: 443
